--- a/multimidia.html
+++ b/multimidia.html
@@ -62,8 +62,9 @@ document.getElementById("icone").src = foto;
         </audio>
 
         
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/4EvNxWhskf8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen type="_media/video.png"></iframe>
-
+      <video id=video>
+            <source src="/_media/getting-started.mp4" type="video/mp4"> 
+        </video>
     </div>
 
 
